// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader /> Render must match button() 1`] = `
<button
  aria-disabled="true"
  className="btn mt-3"
  type="button"
>
  <span>
    Loading
  </span>
  <span
    className="AnimatedEllipsis"
  />
</button>
`;

exports[`<Loader /> Render must match heading() 1`] = `
<h2
  className={null}
>
  <span>
    Loading
  </span>
  <span
    className="AnimatedEllipsis"
  />
</h2>
`;

exports[`<Loader /> Render must match label() 1`] = `
<span
  className="Label bg-blue mt-3"
>
  <span>
    Loading
  </span>
  <span
    className="AnimatedEllipsis"
  />
</span>
`;

exports[`<Loader /> Render must match text() 1`] = `
<span
  className="branch-name mt-2"
>
  <span>
    Loading
  </span>
  <span
    className="AnimatedEllipsis"
  />
</span>
`;
